--- a/client-ui/package.json
+++ b/client-ui/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
+    "react-google-charts": "^3.0.15",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
